# Gomoku

./: CMakeLists.txt  Makefile  deleteCMakeFiles  deleteCMakeFiles.sh  deleteCmakeFiles.sh  makebuild  map.cpp  map.hpp
SFML/lib/linux/: libsfml-audio.so.2.4  libsfml-audio.so.2.4.1  libsfml-graphics.so.2.4  libsfml-graphics.so.2.4.1  libsfml-network.so.2.4  libsfml-network.so.2.4.1  libsfml-system.so.2.4  libsfml-window.so.2.4  libsfml-window.so.2.4.1
includes/: BoardGame.hpp  Case.hpp  Game.hpp  Gomoku.hpp  GomokuReferee.hpp  GomokuUI.hpp  IArtificialInteligence.hpp  IAudio.hpp  IGui.hpp  IPlayer.hpp  IReferee.hpp  Map.hpp  MinMax.hpp  Player.hpp  Referee.hpp  TimerContext.hpp  mSFML.hpp  mSFML_Audio.hpp  mSFML_Window.hpp  map.hpp
mSFML/: CMakeLists.txt  Makefile  mySFMLApp
mSFML/UnitTests/TextureManager/: ITextures.hpp  Makefile  TextureManager.cpp  TextureManager.hpp  mSFML_Textures.cpp  mSFML_Textures.hpp  main.cpp
mSFML/includes/: Gomoku.hpp  IAudio.hpp  IGui.hpp  IReferee.hpp  IWindow.hpp  Map.hpp  Referee.hpp  SFExcept.hpp  Textures.hpp  mSFML_Window.hpp
mSFML/srcs/: Case.cpp  Gomoku.cpp  Main.cpp  Map.cpp  mSFML_Window.cpp  main.cpp
srcs/: ArtificialPlayer.cpp  BoardGame.cpp  Coordinates.cpp  Game.cpp  Gomoku.cpp  GomokuReferee.cpp  GomokuUI.cpp  Main.cpp  Main_jo.cpp  Map.cpp  MinMax.cpp  Player.cpp  Referee.cpp  mSFML_Audio.cpp  mSFML_Window.cpp  map.cpp
tmp/: Bitboard.cpp  Bitboard.hpp  Coordinates.cpp  GomokuReferee.cpp  main.cpp
